# exp-codegen

./: .gitignore  README.md
audio-remix/: audio-waveform-visualizer-colored.html  audio-waveform-visualizer.html  python-http-server.py
csvsplit/: csvsplit.py
grpc/golang/: client.go  go.mod  go.sum
grpc/golang/protos/: service.pb.go  service.proto  service_grpc.pb.go
grpc/kotlin/: build.gradle.kts
grpc/kotlin/src/main/kotlin/com/example/grpc/: GreeterClient.kt
grpc/kotlin/src/main/proto/: service.proto
grpc/python/: client.py  server.py
grpc/python/protos/: service.proto
sqlite-mcp-server/: README.md  __init__.py  database.py  pyproject.toml  server.py  test_integration.py  test_server.py  test_unit.py
sse/: README.md  app.py  cert.pem  key.pem
totp/: README.md  requirements.txt  totp-login-app.py
